[package]
name = "levitation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.24.2", default-features = false, features = ["png"] }

[dependencies.opencv]
version = "0.63"
default-features = false
features = ["imgproc", "features2d", "flann", "videoio", "imgcodecs", "highgui"]
